# template

./: LICENSE  README.md
grpc-spring-kotlin/: README.md  build.gradle.kts
grpc-spring-kotlin/src/main/kotlin/io/saltybyte/demo/: ErrorHandler.kt  Main.kt
grpc-spring-kotlin/src/main/kotlin/io/saltybyte/demo/extension/: Logger.kt
grpc-spring-kotlin/src/main/kotlin/io/saltybyte/demo/security/: AuthHelper.kt  JWTDecoder.kt  SecurityConfig.kt
grpc-spring-kotlin/src/main/kotlin/io/saltybyte/demo/service/: AuthService.kt  HelloService.kt
grpc-spring-kotlin/src/main/proto/: auth.proto  hello.proto
grpc-spring-kotlin/src/main/resources/: application-development.yml  application.yml
grpc-spring-kotlin/src/test/kotlin/io/saltybyte/demo/: ScenarioTest.kt
grpc-spring-kotlin/src/test/kotlin/io/saltybyte/demo/service/: AuthServiceTest.kt  HelloServiceTest.kt
grpc-spring-kotlin/src/test/resources/: application.yml
java/: LICENSE  README.md  build.gradle  settings.gradle
java/src/main/java/: Sample.java
java/src/test/java/: SampleTest.java
python/: LICENSE  README.md  setup.cfg
python/docs/: conf.py  index.rst
qiita/: README.md
typescript/: .eslintrc.json  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: sample.ts
typescript/test/: sample.test.ts
unity/: .gitattributes  .gitignore  README.md
