[metadata]
name = template
version = '0.1.0'
auther = salty-byte
auther_email = saltp40@gmail.com
description = A python template
long_description = file: README.md
url = https://github.com/salty-byte/template
license = MIT
license_file = LICENSE
classifiers = Programming Language :: Python :: 3

[options]
setup_requirs = pytest-runner
install_requires = 
packages = find:
tests_require = pytest

[tool:pytest]
testpaths = tests
python_files = *.py
